# serious-io-library

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt
examples/src/: 00_epoll.cpp  00_epoll_st.cpp
include/sl/: eq.hpp  io.hpp
include/sl/eq/: async_connection.hpp
include/sl/io/: async.hpp  detail.hpp  epoll.hpp  file.hpp  result.hpp  socket.hpp  state.hpp  sys.hpp
include/sl/io/async/: connection.hpp  epoll.hpp  handler.hpp  server.hpp  socket.hpp
include/sl/io/state/: server.hpp  socket.hpp
include/sl/io/sys/: epoll.hpp  file.hpp  socket.hpp
src/async/: connection.cpp  epoll.cpp  server.cpp  socket.cpp
src/eq/: async_connection.cpp  epoll.cpp
src/io/: epoll.cpp  file.cpp  socket.cpp
src/state/: server.cpp  socket.cpp
src/sys/: epoll.cpp  file.cpp  socket.cpp
test/: CMakeLists.txt
test/src/: sys_epoll_test.cpp
